[build-system]
requires       = ["setuptools>=61.0.0", "wheel"]
build-backend  = "setuptools.build_meta"

[project]
name  = "abb-sql-inpection-tool"
version = "1.0.1"
description = "A Django middleware package to print out queries to the terminal"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Xiran Li" },
]

dependencies = [
    
    "Pygments>=2.14.0",
    "sqlparse>=0.4.3",
]

requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["abb-sql-inspection-tool"]


[project.urls]
Homepage = "https://github.com/xiranli007/sql-inspection-middleware.git"

